[package]
name = "derive-with"
version = "0.7.0"
edition = "2024"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "`#[derive(With)]` generates with-constructor for each field in struct."
license = "MIT"
repository = "https://github.com/systemxlabs/derive-with"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
